--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <h1>Welcome to Rambot Robotics</h1>
-        <p>Your go-to solution for advanced robotics technology.</p>
+        <p>placeholder text and whatnot</p>
     </main>
     <script src="scripts.js"></script>
 </body>
